[package]
name = "limit_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "parse_test"
# path = "test/parse_test.rs"

[[bin]]
name = "limit_stream"
path = "src/main.rs"


[[example]]
name = "parse"
path = "examples/parse.rs"

[dependencies]
clap = { version = "4.4.1", features = ["derive", "unicode"] }
nom = "7.1.3"
